# mai_python_labs

./: pyproject.toml
notebooks/: Lab 1.ipynb  Lab 2.ipynb  Lab 3.ipynb
