[tool.poetry]
name = "python_course"
version = "0.1.0"
description = ""
authors = ["cdayz <cdayz@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter = "^1.0.0"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
